# control-near-account-with-mpc-example

./: .gitignore  README.md
contract/: Cargo.toml
contract/src/: lib.rs  signer.rs
scripts/: .env.example  derive-mpc-key.js  package.json  setup.js  transfer.js
